GoalTracker/force-app/main/default/objects/Educational_Project__c/Educational_Project__c.object-meta.xml
<CustomObject>
    <label>Educational &amp; Exec Ed Project</label>
    <nameField>
        <displayFormat>IPEP#-{000000}</displayFormat>
        <label>Educational &amp; Exec Ed Project Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Educational &amp; Exec Ed Projects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>