GoalTracker/force-app/main/default/objects/Educational_Project__c/fields/Course_Number__c.field-meta.xml
<CustomField>
    <fullName>Course_Number__c</fullName>
    <label>Course Number</label>
    <length>64</length>
    <type>Text</type>
</CustomField>