GoalTracker/force-app/main/default/objects/Educational_Project__c/fields/Course_Title__c.field-meta.xml
<CustomField>
    <fullName>Course_Title__c</fullName>
    <label>Course Title</label>
    <length>120</length>
    <type>Text</type>
</CustomField>